# SDL3-Center-Texture-Example

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: wcWindow.hpp
include/utils/: msg_helper.hpp  type_aliases.hpp
src/: main.cpp
src/core/: wcWindow.cpp
src/utils/: msg_helper.cpp
